--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -97,11 +97,7 @@ export GAZEBO_MODEL_PATH=$GAZEBO_MODEL_PATH:/opt/ros/<ros2-distro>/share/turtleb
 	\item En una nueva terminal o pestaña, ejecutar el comando:
 
 \begin{lstlisting}[style=bash] 
-rostopic pub -1 /cmd_vel geometry_msgs/Twist '[0.2,0,0]' '[0,0,0.2]'
-\end{lstlisting}
-o bien:
-\begin{lstlisting}[style=bash] 
-rostopic pub -1 /cmd_vel geometry_msgs/Twist '{linear: {x: 0.2}, angular: {z: 0.2}}'
+ros2 topic pub --rate 1 /turtle1/cmd_vel geometry_msgs/msg/Twist "{linear: {x: 0.2, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 0.2}}"
 \end{lstlisting}
 
 \item Detener el robot fijando la velocidad lineal y angular a cero.
