--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -122,23 +122,23 @@ roslaunch turtlebot3_teleop turtlebot3_teleop_key.launch
 \end{enumerate}
 
 
-\section{Actividades}
-\begin{enumerate}
-\item  Determinar de forma analítica el radio del camino circular que realiza el robot al ajustar la velocidad lineal y angular a valores constantes. Realizar el cálculo para dos velocidades cualquieras teniendo en cuenta las velocidades máximas del robot.
+\section{Ejercicios}
+
+\ejercicio  Determinar de forma analítica el radio del camino circular que realiza el robot al ajustar la velocidad lineal y angular a valores constantes. Realizar el cálculo para dos velocidades cualquieras teniendo en cuenta las velocidades máximas del robot.
 
 Nota: Los límites de velocidad y los parámetros cinemáticos (el radio de la rueda R y la distancia
 entre ruedas b) de los diferentes modelos del robot TurtleBot3 se obtienen de las especificaciones\footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/features/}}.
 
-\item  Calcular la velocidad lineal y angular para que el robot realice un camino circular con un radio a
+\ejercicio  Calcular la velocidad lineal y angular para que el robot realice un camino circular con un radio a
 elección entre 0,5m y 1,5m.
 
-\item  Calcular las velocidades lineales y angulares de las ruedas (izquierda y derecha) del robot para el camino circular del punto anterior.
+\ejercicio  Calcular las velocidades lineales y angulares de las ruedas (izquierda y derecha) del robot para el camino circular del punto anterior.
 
-Generar un registro (log) de odometría y velocidad del robot, para lo cual hay que ejecutar nuevamente
+\ejercicio Generar un registro (log) de odometría y velocidad del robot, para lo cual hay que ejecutar nuevamente
 la simulación y utilizar el script ’dump odom.py’. Este script muestra en pantalla 6 columnas con los
 siguientes datos: tiempo (timestamp), coordenadas x, y, orientación, velocidad lineal y angular.
 
-\item Obtener un registro de datos con el robot en movimiento mediante teleoperación por teclado. Para
+\ejercicio Obtener un registro de datos con el robot en movimiento mediante teleoperación por teclado. Para
 guardar los datos generados por el script hay que redireccionar la salida a un archivo como:
 
 \begin{lstlisting}[style=bash] 
@@ -147,7 +147,7 @@ guardar los datos generados por el script hay que redireccionar la salida a un a
 
 Dentro del IDE de ROSDS hay una opción que permite descargar un archivo del proyecto.
 
-\item Escribir un script en Python que cargue los datos del archivo de log y genere gráficos de:
+\ejercicio Escribir un script en Python que cargue los datos del archivo de log y genere gráficos de:
 \begin{enumerate}
 	\item el camino seguido por el robot,
 	\item la trayectoria (pose respecto al tiempo), y
@@ -158,17 +158,18 @@ Nota: Utilizar una relación de aspecto 1:1 para el gráfico del camino.
 
 Sugerencias: evitar en lo posible el registro de datos iguales a cero.
 
-\item Obtener otro registro de datos para un camino circular del robot y graficar el camino y la trayectoria.
-\item Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria. Elegir puntos diferentes al inicio y final del camino.
+\ejercicio Obtener otro registro de datos para un camino circular del robot y graficar el camino y la trayectoria.
+
+\ejercicio Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria. Elegir puntos diferentes al inicio y final del camino.
 
 
 En base a los gráficos anteriores:
 
+\begin{enumerate}
 
 \item ¿Cuáles son los rangos de valores de las coordenadas x e y y por qué?
 
 \item  ¿Cuál es el rango de valores de la orientación del robot y por qué?
-
 
 \item Obtener diferentes registros y gráficos para caminos circulares con diferentes valores (positivos y negativos) de velocidades lineales y angulares (utilizar todas las combinaciones de signos posibles). Indicar en los gráficos el sentido de avance del robot.
 
