Add tp3 resources

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -475,14 +475,16 @@ export GAZEBO_MODEL_PATH=$GAZEBO_MODEL_PATH:/opt/ros/<ros2-distro>/share/turtleb
 \end{lstlisting}
 
 \begin{lstlisting}[style=bash] 
-    ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
+ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
 \end{lstlisting}
- 
-    https://ros2-industrial-workshop.readthedocs.io/en/latest/\_source/navigation/ROS2-Navigation.html
-    
-    https://docs.ros.org/en/humble/Tutorials/Advanced/Simulators/Ignition.html
-    
-    https://navigation.ros.org/index.html
+
+    El parámetro \lstinline{headless:=False} permite visualizar el simulador Gazebo.
+     
+    \url{https://ros2-industrial-workshop.readthedocs.io/en/latest/\_source/navigation/ROS2-Navigation.html}
+        
+    \url{https://docs.ros.org/en/humble/Tutorials/Advanced/Simulators/Ignition.html}
+        
+    \url{https://navigation.ros.org/index.html} 
 
 \end{frame}
 
