Introduction: add correlativies

--- a/teoricas/teorica_01/src/course_organization.tex
+++ b/teoricas/teorica_01/src/course_organization.tex
@@ -40,9 +40,14 @@
 	
 	Correlativas:
 	\begin{itemize}
-		\item 1er cuatrimestre de 4to año aprobado.
+		\item Álgebra Lineal
+		\item Probabilidad y Estadística
+		\item Complementos de Matemática I
+		\item Métodos numéricos
+		\item Estructura de Datos y Algoritmos II
+		\item Sistemas Operativos I.
+		\item Introducción a la Inteligencia Artificial
 	\end{itemize}
-
 	
 	Regularizar:
 	\begin{itemize}
