Introduction: add correlativies

--- a/teoricas/teorica_01/src/course_organization.tex
+++ b/teoricas/teorica_01/src/course_organization.tex
@@ -45,7 +45,7 @@
 		\item Complementos de Matemática I
 		\item Métodos numéricos
 		\item Estructura de Datos y Algoritmos II
-		\item Sistemas Operativos I.
+		\item Sistemas Operativos I
 		\item Introducción a la Inteligencia Artificial
 	\end{itemize}
 	
