Add some history reference

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -117,7 +117,7 @@
 	
 	\note{https://robotacademy.net.au/masterclass/introduction-to-robotics/?lesson=215}
 	
-	Máquina diferencial mecánica que utilizaba tarjetas perforadas para realizar cómputos. Aunque no construida en su momento fijo los cimientos para construir la computadora electrónica ENIAC durante la Segunda Guerra Mundial.
+	Una máquina diferencial es una calculadora mecánica de propósito especial, diseñada para calcular funciones polinómicas. La Máquina diferencial mecánica creada por Babbage utiliza tarjetas perforadas para realizar cómputos. Aunque no fue construida en su momento fijo los cimientos para construir la computadora electrónica ENIAC durante la Segunda Guerra Mundial.
 	
 	\begin{figure}[!h]
 		\includegraphics[width=0.5\columnwidth]{images/babbage_difference_engine_1870.jpg}
@@ -134,7 +134,7 @@
 	\frametitle{Teleoperación por Raymond Goertz 1949}
 
 	\note{https://robotacademy.net.au/masterclass/introduction-to-robotics/?lesson=215}
-
+	Máquinas maestro-esclavo para manipular materiales radioactivos durante la construcción de armas nucleares. Nace la teleoperación.
 	\begin{figure}[!h]
 	\includegraphics[width=0.6\columnwidth]{images/raymond_goertz_1949.jpg}
 	\end{figure}
