--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -91,11 +91,11 @@
 
 \begin{frame}
     \frametitle{Gaits: static walking gait}
-
+	\small
     En el caso de un robot móvil de varias patas, existe el problema de la coordinación de las patas para su locomoción o control de la marcha.
 
     \begin{center}
-        \includegraphics[width=0.2\columnwidth]{images/hexapod_static_walking_gait.pdf}
+        \includegraphics[width=0.15\columnwidth]{images/hexapod_static_walking_gait.pdf}
     \end{center}
 
     Un gait es una secuencia de eventos de elevación y liberación para las piernas individuales. Para un robot móvil con $k$ patas, el número total de secuencias de eventos distintas para una máquina para caminar es
