--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -117,7 +117,7 @@ ros2 run teleop_twist_keyboard teleop_twist_keyboard.py
 resulta demasiado agresivo)
 o bien,
 \begin{lstlisting}[style=bash] 
-roslaunch turtlebot3_teleop turtlebot3_teleop_key.launch
+ros2 run turtlebot3_teleop turtlebot3_teleop_key.launch
 \end{lstlisting}
 
 \end{enumerate}
@@ -170,8 +170,7 @@ En base a los gráficos anteriores:
 
 \item Obtener diferentes registros y gráficos para caminos circulares con diferentes valores (positivos y negativos) de velocidades lineales y angulares (utilizar todas las combinaciones de signos posibles). Indicar en los gráficos el sentido de avance del robot.
 
-\item Describir cuál sería la secuencia de comandos de velocidad a aplicar al robot para seguir uno de
-los caminos mostrados en la figura 2 (elegir solo uno).
+\item Describir cuál sería la secuencia de comandos de velocidad a aplicar al robot para seguir uno de los caminos mostrados en la figura 2 (elegir solo uno).
 
 \end{enumerate}
 
