--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -103,7 +103,7 @@
 
 \begin{frame}
     \frametitle{Modelo de cinemática directa de un robot diferencial}
-    \footnotesize
+    \scriptsize
     \begin{figure}[!h]
         \centering
         \subfloat[]
