--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -1,7 +1,8 @@
 \begin{frame}
     \frametitle{Representación de pose en 2D}
+    \small
     \begin{center}
-        \includegraphics[width=0.5\columnwidth]{./images/coordinate_frames.pdf}
+        \includegraphics[width=0.3\columnwidth]{./images/coordinate_frames.pdf}
     \end{center}
 
 
