tp1: Add euroc exercise

--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -21,7 +21,7 @@
 \maketitle
 
 \section{Entrega}
-Se deberá entregar un informe realizado en Lyx o latex explicando los pasos realizados y analizando los resultados obtenidos.
+Se deberá entregar un informe realizado en Lyx\footnote{\url{https://www.lyx.org/}} o latex con los ejercicios resueltos y explicando la solución según corresponda. Para realizar gráficos se recomienda la utilización de la herramienta inkscape\footnote{\url{https://inkscape.org/}}.
 
 \section{Ejercicios}
 Esta práctica es para ponerse a punto con transformaciones.
@@ -56,7 +56,7 @@ Esta práctica es para ponerse a punto con transformaciones.
     \item un punto $\worldPoint1 = (1,5)$ en coordenadas del mundo.
     \item un punto $\worldPoint2 = (1,2)$ en coordenadas del robot A.
 \end{itemize}
-
+Resuelva:
 \begin{enumerate}
     \item Dibuje los robots y las poses y todos los sistemas de coordenadas presentes
     \item ¿Cuáles son los coordenadas del punto $\point1$ en el sistema de coordenadas del robot A?
@@ -64,8 +64,22 @@ Esta práctica es para ponerse a punto con transformaciones.
     \item ¿Cuál es la pose del robot B en coordenadas del Mundo?
 \end{enumerate}
 
-\ejercicio Dada las siguientes transformaciones
+\ejercicio Data la pose del robot en el mundo: $\transform{W}{B}$. Si se tiene la trayectoria realizada por la cámara $C$ (montada sobre el robot). ¿Qué procedimiento hay que realizar para obtener la trayectoria del robot en el mundo, sabiendo la transformación $\transform{B}{C}$?
 
-Data la pose del robot en el mundo: $\transform{W}{B}$. Si se tiene la trayectoria realizada por la cámara $C$ (montada sobre el robot). ¿Qué procedimiento hay que realizar para obtener la trayectoria del robot en el mundo, sabiendo la transformación $\transform{B}{C}$?
+\ejercicio Para este ejercicio utilizaremos el dataset EuRoc\footnote{\url{http://robotics.ethz.ch/~asl-datasets/ijrr_euroc_mav_dataset/}}.
+
+Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robot) localizado \url{ http://robotics.ethz.ch/~asl-datasets/ijrr_euroc_mav_dataset/machine_hall/MH_01_easy/MH_01_easy.zip}.
+
+\nota Para la descarga se recomienda utilizar el programa \lstinline{aria2c} con los parámetros: \lstinline{aria2c -s N -x N <URL>}, con \lstinline{N} la cantidad de cores en su computadora.
+
+\begin{enumerate}
+    \item El \emph{ground-truth} se encuentra en coordenadas de la IMU (Body). Se pide crear un script en python que dada la trayectoría ground-truth (timestamp, x, y, z, qw, qx, qy, qz) (primeras 8 columnas del archivo \lstinline{MH_01/state_groundtruth_estimate0.csv}) genere el ground-truth pero que este esté dado por la trayectoria de la cámara izquierda. Para esto deberá utilizar las transformaciones provistas en el dataset.
+    
+    \item Modifique el script para que el timestamp del nuevo \emph{ground-truth} este en segundos con precisión de nanosegundos.
+    
+    \item Modifique el script para que genere una imagen con ambos \emph{ground-truth} (el original en coordendas del Body y ).
+\end{enumerate}
+
+
 
 \end{document}
