tp1: Add euroc exercise

--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -21,7 +21,7 @@
 \maketitle
 
 \section{Entrega}
-Se deberá entregar un informe realizado en Lyx\footnote{\url{https://www.lyx.org/}} o latex con los ejercicios resueltos y explicando la solución según corresponda. Para realizar gráficos se recomienda la utilización de la herramienta inkscape\footnote{\url{https://inkscape.org/}}.
+Se deberá entregar un informe realizado en Lyx\footnote{\url{https://www.lyx.org/}} o latex con los ejercicios resueltos y explicando la solución según lo vea necesario para su comprensión. Para realizar gráficos se recomienda la utilización de la herramienta inkscape\footnote{\url{https://inkscape.org/}}.
 
 \section{Ejercicios}
 Esta práctica es para ponerse a punto con transformaciones.
@@ -77,7 +77,7 @@ Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robo
     
     \item Modifique el script para que el timestamp del nuevo \emph{ground-truth} este en segundos con precisión de nanosegundos.
     
-    \item Modifique el script para que genere una imagen con ambos \emph{ground-truth} (el original en coordendas del Body y ).
+    \item Modifique el script para que genere una imagen con ambos \emph{ground-truth} (el camino de la IMU y el camino de la cámara).
 \end{enumerate}
 
 
