--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -66,7 +66,7 @@ Resuelva:
 
 \ejercicio Data la pose del robot en el mundo: $\transform{W}{B}$. Si se tiene la trayectoria realizada por la cámara $C$ (montada sobre el robot). ¿Qué procedimiento hay que realizar para obtener la trayectoria del robot en el mundo, sabiendo la transformación $\transform{B}{C}$?
 
-\ejercicio Para este ejercicio utilizaremos el dataset EuRoc\footnote{\url{http://robotics.ethz.ch/~asl-datasets/ijrr_euroc_mav_dataset/}}.
+\ejercicio Para este ejercicio utilizaremos el dataset EuRoc\footnote{\url{https://projects.asl.ethz.ch/datasets/kmavvisualinertialdatasets}}.
 
 Descargue el archivo \emph{ground-truth} (trayectoria real realizada por el robot) localizado \url{ http://robotics.ethz.ch/~asl-datasets/ijrr_euroc_mav_dataset/machine_hall/MH_01_easy/MH_01_easy.zip}.
 
